# Glosa

./: .dockerignore  .gitignore  AGENTS.md  DEPLOY.md  LICENSE.md  PRODUCT_EVAL.md  README.md  pyproject.toml
.claude/skills/product-eval/: SKILL.md
.claude/skills/product-eval/references/: product-eval-template.md
backend/ai-service-python/: .dockerignore  Dockerfile  README.md  app.py  fly.toml  main.py  pyproject.toml  requirements.txt
backend/ai-service-python/lib/: cache.py  llm.py  logger.py  prompts.py  prompts.yaml
backend/gateway-node/: .dockerignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json  server.js
benchmark/: bench.py
eval/: README.md  eval.py  rubric.json
extension/: content.js  manifest.json  popup.html  popup.js  translation-widget.js
loader/: console-snippet.js
