[project]
name = "ai-service-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite==0.20.0",
    "anthropic==0.116.0",
    "fastapi==0.115.0",
    "instructor>=1.15.4",
    "jinja2>=3.1.6",
    "python-dotenv==1.0.1",
    "pyyaml>=6.0.3",
    "uvicorn[standard]==0.30.6",
]
